# AI_ML

./: 2025AIML049.ipynb
Regression/: 2025AIML049.ipynb
Regression/Assignment1/: 2025AIML049.ipynb  Luggage_Bag_COst_Predictor.ipynb  Matrix_Questions.docx  Mini_Project_Dataset.csv  Regression_line_solution.ipynb  regression_line_approach_1.ipynb
classification/Assignment1/: 2025AIML049.html  2025AIML049.ipynb
classification/Assignment2/: 2025AIML049.html  2025AIML049.ipynb  CLassification_KNN.ipynb  Logistic_Regression.ipynb  Logistic_Regression_Webinar_Notebook.ipynb  Naive_Bayes_Webinar_Notebook.ipynb
classification/Assignment3/: 2025AIML049.html  2025AIML049.ipynb  Instruction_Assignment3.md
classification/Assignment4/: 2025AIML049.html  2025AIML049.ipynb  Webinar 5.ipynb
feature_eng/: 2025AIML049.ipynb  2025AIML049_FE - Mini project.ipynb
mcp/: .env.example  .gitignore  QUICKSTART.md  README.md  SETUP_COMPLETE.md  SETUP_SUMMARY.md  START_HERE.md  pyproject.toml  requirements.txt  run_server.sh  setup.sh
mcp/.github/: copilot-instructions.md
mcp/gmail_mcp_server/: __init__.py  config.py  gmail_client.py  server.py
unsupervised/Assignment1/: 2025AIML049.docx  2025AIML049.html  2025AIML049.ipynb  Instruction.md  KMeans_Clustering_Assignment.ipynb  answer.md
unsupervised/Assignment2/: 2025AIML049.html  2025AIML049.ipynb  Instruction.md
unsupervised/Mini_Project1/: 2025AIML049.html  2025AIML049.ipynb  Instruction.md
unsupervised/Mini_project2/: 2025AIML049.html  2025AIML049.ipynb  2025AIML060.html  2025AIML060.ipynb  Instruction.md
